Bug fixed for apple devices and testing tilt on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,6 +19,7 @@ h1,h2,h3,h4,h5,h6{font-size: inherit;font-weight: inherit;}
 /*--------------------------------------------------------EndNulling------------------------------------------------------------------------ */
 *{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: black;
 }
 
 body{
