--- a/app/page.module.css
+++ b/app/page.module.css
@@ -12,6 +12,7 @@
     font-size: 45px;
     padding-bottom: 25px;
     font-weight: 700;
+    text-align: center;
     color: black;
 }
 
@@ -19,4 +20,25 @@
     display: flex;  
     flex-direction: column;
     gap: 15px; 
+}
+
+
+@media screen and (max-width: 1000px) {
+    .container{
+        width: 700px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .container{ 
+        width: 400px;      
+    } 
+}
+
+
+
+@media screen and (max-width: 400px) {
+    .container{ 
+        width: 300px;     
+    } 
 }
