--- a/components/components.module.css
+++ b/components/components.module.css
@@ -63,8 +63,7 @@
     width: 100%;
     height: 100%; 
     border-radius: 10px;  
-    overflow: hidden; 
-    backface-visibility: hidden;  
+    overflow: hidden;  
 }
 
 .back::before{
@@ -150,7 +149,7 @@
 .navigation{
     display: flex; 
     height: 25px;
-    width: 300px;
+    width: 220px;
     justify-content: space-between; 
     font-size: 20px; 
 } 
@@ -204,4 +203,9 @@
         font-size: 15px; 
         width: 200px;
     }
+    .navbarContainer{
+        padding: 20px 10px;
+        font-size: 12px;
+    }
+
 }
